# rclone-jobber

./: .gitignore  Cargo.toml  README.md  test.yaml
src/: args.rs  job.rs  main.rs  types.rs  utils.rs
